/*
 * Copyright (c) 2024 OrigAdmin. All rights reserved.
 */

// Package filestore implements the functions, types, and interfaces for the module.
package filestore

import (
	"io"

	filestorev1 "github.com/origadmin/runtime/api/gen/go/runtime/data/file/v1" // Assuming a similar proto structure for filestore
	runtimeerrors "github.com/origadmin/runtime/errors"
	storageiface "github.com/origadmin/runtime/interfaces/storage"
	"github.com/origadmin/toolkits/errors"
)

const (
	Module                = "storage.filestore"
	ErrFilestoreConfigNil = errors.String("filestore: config is nil")
)

// filestoreImpl implements the storageiface.FileStore interface.
type filestoreImpl struct {
	// Add fields for filestore implementation here
}

// List lists files and directories in the given path.
func (f *filestoreImpl) List(path string) ([]storageiface.FileInfo, error) {
	// Implement List logic
	return nil, nil
}

// Stat returns information about a file or directory.
func (f *filestoreImpl) Stat(path string) (storageiface.FileInfo, error) {
	// Implement Stat logic
	return storageiface.FileInfo{}, nil
}

// Read reads a file from the filestore.
func (f *filestoreImpl) Read(path string) (io.ReadCloser, error) {
	// Implement Read logic
	return nil, nil
}

// Mkdir creates a directory.
func (f *filestoreImpl) Mkdir(path string) error {
	// Implement Mkdir logic
	return nil
}

// Delete deletes a file or directory.
func (f *filestoreImpl) Delete(path string) error {
	// Implement Delete logic
	return nil
}

// Rename renames a file or directory.
func (f *filestoreImpl) Rename(oldPath, newPath string) error {
	// Implement Rename logic
	return nil
}

// Write writes data to a file.
func (f *filestoreImpl) Write(path string, data io.Reader, size int64) error {
	// Implement Write logic
	return nil
}

// New creates a new filestore instance based on the provided configuration.
func New(cfg *filestorev1.FileStoreConfig) (storageiface.FileStore, error) {
	if cfg == nil {
		return nil, ErrFilestoreConfigNil
	}

	// Here, you would typically switch on cfg.GetDriver() and
	// call specific New functions for different filestore types (e.g., local.New, s3.New)
	// For now, we'll return a placeholder.
	switch cfg.GetDriver() {
	case "local":
		// return local.New(cfg.GetLocal()), nil
		return &filestoreImpl{}, nil // Placeholder
	case "s3":
		// return s3.New(cfg.GetS3()), nil
		return &filestoreImpl{}, nil // Placeholder
	default:
		return nil, runtimeerrors.NewStructured(Module, "unsupported filestore driver: %s", cfg.GetDriver()).WithCaller()
	}
}

// multipartUploadImpl implements the storageiface.MultipartUpload interface.
type multipartUploadImpl struct {
	// Add fields for multipart upload implementation here
}

// UploadPart uploads a single chunk of data as a part of the multipart upload.
func (m *multipartUploadImpl) UploadPart(partNumber int, reader io.Reader, size int64) (storageiface.CompletedPart, error) {
	// Implement UploadPart logic
	return storageiface.CompletedPart{}, nil
}

// Complete finalizes the multipart upload.
func (m *multipartUploadImpl) Complete(parts []storageiface.CompletedPart) error {
	// Implement Complete logic
	return nil
}

// Abort cancels the multipart upload.
func (m *multipartUploadImpl) Abort() error {
	// Implement Abort logic
	return nil
}

// UploadID returns the unique identifier for this upload session.
func (m *multipartUploadImpl) UploadID() string {
	// Implement UploadID logic
	return ""
}
